# UniversalDevManager

./: .editorconfig  .gitignore  LICENSE  README.md  main.py  meson.build  pyproject.toml  tools.json
.github/workflows/: build.yml  codeql.yml  pages.yml
scripts/: build_appimage.sh  build_dmg.sh  build_exe.py  create_cert.ps1  sync_version.py
src/udm/: __init__.py  __main__.py  app.py  config.py  constants.py  logger.py  network.py
src/udm/gui/: __init__.py  action_bar.py  header.py  log_panel.py  main_window.py  search_bar.py  sidebar.py  status_bar.py  theme.py  tool_table.py  widgets.py
src/udm/installer/: __init__.py  batch.py  callbacks.py  engine.py  prerequisites.py
src/udm/platform/: __init__.py  admin.py  command.py  detect.py  path.py
