[project]
name = "universal-dev-manager"
version = "2.0.0"
description = "Cross-platform developer tool installer with Qt GUI"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "PySide6>=6.6.0",
]

[project.scripts]
udm = "udm.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/udm"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]
