[project]
name = "devinstaller"
version = "3.0.0"
description = "DevInstaller — cross-platform developer tool installer with premium Qt GUI"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "PySide6>=6.6.0",
]

[project.scripts]
devinstaller = "udm.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/udm"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]
